<resources>
    <string name="app_name">EventsSicredi</string>
    <string name="event_list_title">Lista de Eventos</string>
    <string name="event_detail_title">Detalhe do Evento</string>
    <string name="title_example">Texto 1</string>
    <string name="date_example">01/01/2001 00:00</string>
    <string name="price_example">0,00 R$</string>
    <string name="check_in_title">Faça o Check-in!</string>
    <string name="name_title">Nome</string>
    <string name="name_hint">Digite seu nome</string>
    <string name="email_title">E-mail</string>
    <string name="email_hint">Digite seu E-mail</string>
    <string name="button_send_title">Enviar</string>

    <string name="date_hour_minute_format">dd/MM/yyyy HH:mm</string>
    <string name="subscriber_name_hint">Digite seu nome</string>
    <string name="subscriber_email_hint">Digite seu e-mail</string>

    <string name="connection_success">Check-in realizado com sucesso!</string>
    <string name="connection_error">Seu dispositivo está sem conexão à internet.</string>
    <string name="check_email_error_message">E-mail digitado incorretamente</string>
    <string name="connection_error_400">Ocorreu um erro de conexão, erro 400.</string>
    <string name="connection_error_401">Ocorreu um erro de conexão, erro 401.</string>
    <string name="connection_error_403">Ocorreu um erro de conexão, erro 403.</string>
    <string name="connection_error_500">Ocorreu um erro de conexão, erro 500.</string>
    <string name="connection_error_503">Ocorreu um erro de conexão, erro 503.</string>
    <string name="share">Share</string>

</resources>