<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/high_margin"
        android:text="@string/check_in_title"
        android:textAlignment="center"
        android:background="@color/teal_700"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/high_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/high_margin"
        android:text="@string/name_title"
        android:textColor="@color/teal_700"
        android:layout_marginStart="@dimen/high_margin"/>

    <EditText
        android:id="@+id/name_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:singleLine="true"
        android:hint="@string/name_hint"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/high_margin"
        android:text="@string/email_title"
        android:textColor="@color/teal_700"
        android:layout_marginStart="@dimen/high_margin"/>

    <EditText
        android:id="@+id/email_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:singleLine="true"
        android:hint="@string/email_hint"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/high_margin"
        android:layout_marginBottom="@dimen/high_margin">

        <Button
            android:id="@+id/send_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/high_margin"
            android:layout_marginTop="@dimen/high_margin"
            android:layout_marginEnd="@dimen/high_margin"
            android:layout_marginBottom="@dimen/high_margin"
            android:backgroundTint="@color/teal_700"
            android:text="@string/button_send_title" />

    </RelativeLayout>

    </LinearLayout>

</LinearLayout>